MODINV-1266: ECS | MARC holdings record cannot be opened via "quickMARC" after Ownership update (#856)
* MODSOURCE-921: ECS | MARC holdings record cannot be opened via "quickMARC" after Ownership update

(cherry picked from commit 119101bd6b32f827bead3c8811a6c9e39569a201)